# AkiraBot

./: .gitignore  Cargo.toml
src/: general.rs  main.rs
src/commands/: general.rs  management.rs  mod.rs
